<resources>

    <string name="app_name">Music Player</string>
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="player">Audio Player</string>
    <string name="next">Next</string>
    <string name="open_playlist">Open Playlist</string>
    <string name="idle">Idle</string>
    <string name="empty_text">Select song from below to play</string>
    <string name="player_button">Album Art Screen</string>

    <color name="orange">#ff3d00</color>
    <color name="white">#ffffff</color>
    <color name="opaque">#70000000</color>

    <dimen name="button_width">32dp</dimen>
    <dimen name="small_button_width">28dp</dimen>
    <dimen name="small_image_art_width">85dp</dimen>


    <string name="action_search">Search</string>
    <string name="sort">Sort songs </string>
    <string name="name_song">Title</string>
    <string name="artist">Artist  </string>
    <string name="album">Album  </string>
    <string name="duration">Duration  </string>
    <string name="add">Add</string>
    <string name="all_songs">All songs</string>
    <string name="songs_from_the_folder">Songs with folders</string>
    <string name="title_activity_file_browse">FileBrowse</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

</resources>