<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_song"
        android:icon="@drawable/search_black"
        android:title="@string/action_search"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        yourapp:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/playList"
        android:icon="@drawable/add"
        android:title="@string/add"
        yourapp:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/addAllSongs"
                android:title="@string/all_songs" />
            <item
                android:id="@+id/addFolderSongs"
                android:title="@string/songs_from_the_folder" />
        </menu>
    </item>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/sort_black"
        android:title="@string/sort"
        yourapp:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/mTitle"
                android:title="@string/name_song" />
            <item
                android:id="@+id/mArtist"
                android:title="@string/artist" />
            <item
                android:id="@+id/mAlbum"
                android:title="@string/album" />
            <item
                android:id="@+id/mDuration"
                android:title="@string/duration" />
        </menu>
    </item>
</menu>